# tydns

./: CMakeLists.txt
cmake/: FindTcmalloc.cmake
src/: config.h  logging.h  main.cpp  packet.cpp  packet.h  server.cpp  server.h  utils.h
